# nxweb

./: .gitignore  .hgtags  CMakeLists.txt  INSTALL
example/: CMakeLists.txt  handler.cpp  handler.h
example/cmake/: FindBLAZE.cmake
examples/openmp/: CMakeLists.txt  config.c  main.cpp
examples/openmp/cmake/: FindGlog.cmake
src/include/nxweb/: http_server.h  misc.h  nxweb.h
src/lib/: CMakeLists.txt  http_server.c  main_stub.c
